<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="false">

    <RadioButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_change_password"
        android:id="@+id/changepswd_rbtn"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:checked="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/changepswd_input_code_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:singleLine="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp">
    </EditText>

    <EditText
        android:id="@+id/changepswd_reinput_code_et"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/changepswd_input_code_et"
        android:hint="@string/hint_reinput_password"
        android:inputType="textPassword"
        android:singleLine="false"
        android:layout_below="@+id/changepswd_input_code_et">
    </EditText>

    <Button
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/string_confirm"
        android:id="@+id/confirm_btn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:enabled="true"
        android:layout_below="@+id/changepswd_reinput_code_et" />

</RelativeLayout>